--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/b">best free website creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.ws/o">free mobile website builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -116,14 +116,14 @@
             <div class="col-md-10 col-md-offset-1">
 
             <h3 class="mbr-section-title display-2 mbr-editable-content">Early Birds 2<div><span style="font-weight: normal;">Total Supply: 150,000,000
-</span></div><div><span style="font-weight: normal;">Sold: 7,548,870</span></div><div><span style="font-weight: normal;">Balance: 142,451,130</span></div></h3>
+</span></div><div><span style="font-weight: normal;">Sold: 10,298,870</span></div><div><span style="font-weight: normal;">Balance: 139,701,130</span></div></h3>
 
                 <div class="progress1">
                     <div class="title-wrap">
                         <div class="progressbar-title">
-                            <p class="mbr-editable-content">Percentage Sold (5.03%)</p>
+                            <p class="mbr-editable-content">Percentage Sold (6.87%)</p>
                         </div>
-                        <div class="progressbar-number">5.03</div>
+                        <div class="progressbar-number">6.87</div>
                         <span>%</span>
                     </div>
                     <progress class="progress progress-primary" max="100" value="3">
@@ -177,14 +177,14 @@
                         <h1>GETModer Early Birds Private Sales Event</h1>
                     </div>
                     <div class="clearfix"></div>
-                    <div id="accordion_22" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
+                    <div id="accordion_20" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
                       <div class="accordion-group">
                         <div class="panel panel-default colorBG" style="display: block;">
                             <div class="panel-heading" role="tab" id="headingOne">
                                 <span class="signSpan pseudoMinus"></span>
-                                <h4 class="panel-title"><a role="button" class="text-black collapsed" data-toggle="collapse" data-parent="#accordion_22" data-core="" href="#collapseOne_22" aria-expanded="false" aria-controls="collapseOne"><span class="sign"></span><strong>What is Early Birds Private Sales Event?</strong></a></h4>
+                                <h4 class="panel-title"><a role="button" class="text-black collapsed" data-toggle="collapse" data-parent="#accordion_20" data-core="" href="#collapseOne_20" aria-expanded="false" aria-controls="collapseOne"><span class="sign"></span><strong>What is Early Birds Private Sales Event?</strong></a></h4>
                             </div>
-                            <div id="collapseOne_22" class="panel-collapse noScroll collapse in" role="tabpanel" aria-labelledby="headingOne">
+                            <div id="collapseOne_20" class="panel-collapse noScroll collapse in" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body"><p>Early Birds Private Sales Event is an exclusive “early bird” opportunity for people to purchase tokens/coins before they go public about the ITO.&nbsp;</p><br><p>The pre-sale usually comes with two main advantages over the public sale:
 </p><p>
 <strong>1)</strong>&nbsp;<span style="font-size: 1rem;">Price. Token prices are much cheaper than in the public sale.&nbsp;</span></p><p><strong>2)</strong> Bonus. Early buyers could benefit from additional free bonus during the pre-sale phase which is often not the case when the token goes to the crowd sale.</p><p><br></p><p>In our case, it is open only to accredited investors. &nbsp;Not everyone gets a chance at the Early Birds offerings, it’s reserved for special groups of people such as such as strategic buyers, family members, close friends, business associates and other members in close circles.&nbsp;</p><br><p>We will soon be inviting a limited number of contributors to take part in the Early Birds Private Sale event. If you are interested in joining the Early Bird Offering for maximum benefits, <a href="page7.html" class="text-primary">please follow this link to get whitelisted</a>.</p></div>
@@ -193,27 +193,27 @@
                         <div class="panel panel-default" style="display: block;">
                             <div class="panel-heading" role="tab" id="headingTwo">
                                 <span class="signSpan pseudoPlus"></span>
-                                <h4 class="panel-title"><a role="button" class="" data-toggle="collapse" data-parent="#accordion_22" data-core="" href="#collapseTwo_22" aria-expanded="true" aria-controls="collapseTwo"><strong>Details of the Early Birds Event</strong></a></h4>
+                                <h4 class="panel-title"><a role="button" class="" data-toggle="collapse" data-parent="#accordion_20" data-core="" href="#collapseTwo_20" aria-expanded="true" aria-controls="collapseTwo"><strong>Details of the Early Birds Event</strong></a></h4>
                             </div>
-                            <div id="collapseTwo_22" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                            <div id="collapseTwo_20" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body">The Private sale starting from April 15th, 2018 and ends on July 15, 2018, or when all of the private sale tokens have been sold, whichever is earlier.<br><br>We have allocated 150 million of the available total token supply towards the private sale in three different stages. <br><br>1 ETH will bring you 6,000 GTMR tokens during Early Birds 1. Please refer to the above table for the token distribution at each stage of the Private Sales Event.<br><br>Hard Cap: 25,000 ETHER<br><br><div>Purchase Currency: ETH is the only currency, which will be accepted for Private sale purchases. We will provide you with the address to which ETH payments must be sent after you are accepted as our Early Birds participant.</div></div>
                             </div>
                         </div>
                         <div class="panel panel-default" style="display: block;">
                             <div class="panel-heading" role="tab" id="headingThree">
                                 <span class="signSpan pseudoPlus"></span>
-                                <h4 class="panel-title"><a role="button" class="" data-toggle="collapse" data-parent="#accordion_22" data-core="" href="#collapseThree_22" aria-expanded="true" aria-controls="collapseThree"><strong>When does the Private Sales Event close? When will the Public Sales occur?</strong></a></h4>
+                                <h4 class="panel-title"><a role="button" class="" data-toggle="collapse" data-parent="#accordion_20" data-core="" href="#collapseThree_20" aria-expanded="true" aria-controls="collapseThree"><strong>When does the Private Sales Event close? When will the Public Sales occur?</strong></a></h4>
                             </div>
-                            <div id="collapseThree_22" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapseThree_20" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body"><p><span style="font-size: 1rem;">GETModer Token Offering Event:</span></p><p><span style="font-size: 1rem;">a) The Early Birds Private Sales</span></p><p><span style="font-size: 1rem;">b) The Public Sales (Pre-ITO &amp; ITO)</span></p><p><br></p><p><span style="font-size: 1rem;">Total sales is capped at 25,000 ETHER</span></p><br><p><span style="font-size: 1rem;">In the event of a complete sold out of the 150 million GTMR token during any stage of the Early Birds Private Sales event, GETModer foundation will immediately announce and close the token offering event on this website, without the occurence of the Public Pre-ITO and ITO. GETModer will then proceed to token sales auditing reports, roadmaps and preparation of the exchanges listing which Getmoder will announce with full details on this website.</span><br></p><p><br></p><p>However in the event of any unsold token during the Early Birds event, the unsold tokens will be automatically carried forward to Pre-ITO, date of which will be announced after the completion of the entire Early Birds Event. Hence the Public Sales (Pre-ITO &amp; ITO) will begin after the private sale closes.</p></div>
                             </div>
                         </div>
                         <div class="panel panel-default" style="display: block;">
                             <div class="panel-heading" role="tab" id="headingThree">
                                 <span class="signSpan pseudoPlus"></span>
-                                <h4 class="panel-title"><a role="button" class="" data-toggle="collapse" data-parent="#accordion_22" data-core="" href="#collapseFour_22" aria-expanded="true" aria-controls="collapseFour"><strong>Roadmaps &amp; Team Profile&nbsp;</strong></a></h4>
+                                <h4 class="panel-title"><a role="button" class="" data-toggle="collapse" data-parent="#accordion_20" data-core="" href="#collapseFour_20" aria-expanded="true" aria-controls="collapseFour"><strong>Roadmaps &amp; Team Profile&nbsp;</strong></a></h4>
                             </div>
-                            <div id="collapseFour_22" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapseFour_20" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body"><p>The comprehensive Roadmaps &amp; Team Profile details will be published after we have achieved 25% completion of the token sales in the Early Birds event.</p></div>
                             </div>
                         </div>
