--- a/page8.html
+++ b/page8.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/f">simple web builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="82" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.ws/q">free website builder download</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="82" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -118,14 +118,14 @@
 
             <h3 class="mbr-section-title display-2 mbr-editable-content"><span style="font-weight: normal;">初期预售 2
 </span><div><span style="font-weight: normal;">总共应量: 150,000,000
-</span></div><div><span style="font-weight: normal;">已</span><span style="font-weight: normal; color: inherit;">卖出: 7,548,870</span></div><div><span style="font-weight: normal; color: inherit;">余额: 142,451,130</span></div></h3>
+</span></div><div><span style="font-weight: normal;">已</span><span style="font-weight: normal; color: inherit;">卖出: 10,298,870</span></div><div><span style="font-weight: normal; color: inherit;">余额: 139,701,130</span></div></h3>
 
                 <div class="progress1">
                     <div class="title-wrap">
                         <div class="progressbar-title">
-                            <p class="mbr-editable-content">已卖出巴仙率 (5.03%)</p>
+                            <p class="mbr-editable-content">已卖出巴仙率 (6.87%)</p>
                         </div>
-                        <div class="progressbar-number">5.03</div>
+                        <div class="progressbar-number">6.87</div>
                         <span>%</span>
                     </div>
                     <progress class="progress progress-primary" max="100" value="3">
